# 1-source_harvester

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  _repo_test.sqlite3  _test_db.sqlite3  alembic.ini  compose.yaml  gunicorn_conf.py  pyproject.toml
.github/: PR_BODY.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  config.py  main.py  models.py
app/adapters/: base.py  brave.py  google.py  serper.py
app/core/: hashing.py  orchestrator.py  placeholders.py  schema.py  validation.py
app/db/: queries.py  session.py
app/http/: client.py
app/llm/: client.py
app/observability/: health.py  logging.py  metrics.py
configs/: default.yaml
deploy/nginx/: source-harvester.conf
deploy/systemd/: source-harvester.service
docs/: RUNBOOK.md
specs/: Research_search-providers.md  SH_Microservice_Plan.md  SH_Microservice_Spec.md
tests/: conftest.py  test_app_startup.py  test_config.py  test_healthz.py
tests/acceptance/: test_acceptance.py
tests/adapters/: test_brave.py  test_google.py  test_query_builder.py  test_serper.py
tests/api/: test_errors_and_auth.py  test_search_runs.py
tests/core/: test_orchestrator.py  test_placeholders.py  test_schema.py
tests/db/: test_migrations.py  test_postgres_testcontainers.py  test_repositories.py  test_repositories_more.py  test_session.py
tests/e2e/: test_smoke.py
tests/http/: test_http_client.py
tests/llm/: test_client.py
tests/observability/: test_health.py  (+2 more)
(+5 files in other folders)
